@@ -3,6 +3,7 @@
 from ..model import ModelSQL, fields
 from .. import backend
 from ..pool import Pool, PoolMeta
+from ..transaction import Transaction
 
 __all__ = [
     'UIMenuGroup', 'ActionGroup', 'ModelFieldGroup', 'ModelButtonGroup',
@@ -24,10 +25,11 @@ class UIMenuGroup(ModelSQL):
     @classmethod
     def __register__(cls, module_name):
         TableHandler = backend.get('TableHandler')
+        transaction = Transaction()
         # Migration from 1.0 table name change
         TableHandler.table_rename('ir_ui_menu_group_rel', cls._table)
-        TableHandler.sequence_rename('ir_ui_menu_group_rel_id_seq',
-            cls._table + '_id_seq')
+        transaction.database.sequence_rename(transaction.connection,
+            'ir_ui_menu_group_rel_id_seq', cls._table + '_id_seq')
         # Migration from 2.0 menu_id and gid renamed into menu group
         table = TableHandler(cls, module_name)
         table.column_rename('menu_id', 'menu')
@@ -65,10 +67,11 @@ class ActionGroup(ModelSQL):
     @classmethod
     def __register__(cls, module_name):
         TableHandler = backend.get('TableHandler')
+        transaction = Transaction()
         # Migration from 1.0 table name change
         TableHandler.table_rename('ir_action_group_rel', cls._table)
-        TableHandler.sequence_rename('ir_action_group_rel_id_seq',
-            cls._table + '_id_seq')
+        transaction.database.sequence_rename(transaction.connection,
+            'ir_action_group_rel_id_seq', cls._table + '_id_seq')
         # Migration from 2.0 action_id and gid renamed into action and group
         table = TableHandler(cls, module_name)
         table.column_rename('action_id', 'action')
@@ -119,10 +122,12 @@ class ModelFieldGroup(ModelSQL):
     @classmethod
     def __register__(cls, module_name):
         TableHandler = backend.get('TableHandler')
+        database = Transaction().database
+        transaction = Transaction()
         # Migration from 1.0 table name change
         TableHandler.table_rename('ir_model_field_group_rel', cls._table)
-        TableHandler.sequence_rename('ir_model_field_group_rel_id_seq',
-            cls._table + '_id_seq')
+        transaction.database.sequence_rename(transaction.connection,
+            'ir_model_field_group_rel_id_seq', cls._table + '_id_seq')
         table = TableHandler(cls, module_name)
         # Migration from 2.6: field_id and group_id renamed to field and group
         table.column_rename('field_id', 'field')
@@ -189,10 +194,11 @@ class RuleGroupGroup(ModelSQL):
     @classmethod
     def __register__(cls, module_name):
         TableHandler = backend.get('TableHandler')
+        transaction = Transaction()
         # Migration from 1.0 table name change
         TableHandler.table_rename('group_rule_group_rel', cls._table)
-        TableHandler.sequence_rename('group_rule_group_rel_id_seq',
-            cls._table + '_id_seq')
+        transaction.database.sequence_rename(transaction.connection,
+            'group_rule_group_rel_id_seq', cls._table + '_id_seq')
         # Migration from 2.0 rule_group_id and group_id renamed into rule_group
         # and group
         table = TableHandler(cls, module_name)
@@ -212,10 +218,11 @@ class RuleGroupUser(ModelSQL):
     @classmethod
     def __register__(cls, module_name):
         TableHandler = backend.get('TableHandler')
+        transaction = Transaction()
         # Migration from 1.0 table name change
         TableHandler.table_rename('user_rule_group_rel', cls._table)
-        TableHandler.sequence_rename('user_rule_group_rel_id_seq',
-            cls._table + '_id_seq')
+        transaction.database.sequence_rename(transaction.connection,
+            'user_rule_group_rel_id_seq', cls._table + '_id_seq')
         # Migration from 2.0 rule_group_id and user_id renamed into rule_group
         # and user
         table = TableHandler(cls, module_name)
